# Projekt_Software

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
c/: CMakeLists.txt  Makefile
c/src/: greeting.c  greeting.h  main.c
c/test/: test_main.c
python/: Makefile  pyproject.toml
python/src/: hello.py
python/test/: test_hello.py
